Fix for typeahead getting cut off

--- a/packages/recipes/public/assets/css/recipes.css
+++ b/packages/recipes/public/assets/css/recipes.css
@@ -1,1 +1,7 @@
 .recipes_example h1:{background-color:purple}
+
+.border-fix {
+  overflow: visible !important;
+  display: inline-block;
+  width: inherit;
+}
